remove submodule for Heroku compatibility

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,8 +25,8 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="/style.css" type="text/css"/>
-  <script src="/sienna-boilerplate/jquery.min.js"></script>
-  <script src="/sienna-boilerplate/sienna-boilerplate.js"></script>
+  <script src="/jquery.min.js"></script>
+  <script src="/sienna-boilerplate.js"></script>
   <script src='https://www.google.com/recaptcha/api.js'></script>
 
 </head>
