--- a/views/home.erb
+++ b/views/home.erb
@@ -11,7 +11,8 @@
 <div class="row">
   <div class="six columns">
     <h3>Michael W. Harris, Ph.D.</h3>
-    <p>C2M2 is Michael's brainchild. For more about Michael,
+    <p>Michael is a librarian, archivist, and musicologist. C2M2 is Michael's
+      brainchild. For more about Michael,
       <a href="http://www.michaelwharris.net/" target="new">visit his
         website</a>
       or <a href="http://www.thetemptrack.com" target="new">his blog</a>.
@@ -19,7 +20,8 @@
   </div>
   <div class="six columns">
     <h3>Sienna M. Wood, Ph.D.</h3>
-    <p>Sienna built this website. For more about Sienna,
+    <p>Sienna is a musicologist and a web developer. She built this website. For
+      more about Sienna,
       <a href="http://www.siennamwood.com" target="new">visit her website</a>.
     </p>
   </div>
