--- a/views/vision.erb
+++ b/views/vision.erb
@@ -1,8 +1,15 @@
 <h2>Vision and Design</h2>
-<p>C2M2 will catalogue notated music and related documents; audio
-  recordings will not be included initially but may be added in the future.</p>
-<ul>
-  <li>How the site will work</li>
-  <li>What you will find here</li>
-  <li>Screenshots</li>
-</ul>
+<p>Collections of Cinema and Media Music (C2M2) seeks to provide scholars
+  working with music in film, television, video game, and other types of media
+  with an easy way to locate archival materials relevant to their research. This
+  website will host a database searchable by composer, title of a work,
+  production company, publication date, location of materials, etc. This
+  information will be gathered by working with both scholars and archivists
+  active in the field. For now, new materials will be added to the database by
+  the creators of this site, Michael Harris and Sienna Wood, but in the near
+  future we hope to bring on additional contributors to help with tasks such as
+  this.</p>
+<p>As this project matures, C2M2 hopes to foster communication between scholars,
+  archivists, and practitioners in order to build a robust archival record of
+  cinema and media music. For more on this, see <a href="\why">Why C2M2?</a>.
+</p>
