make subdirs for css and js, update layout and gitignore

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,10 +24,10 @@
   <meta name="msapplication-TileImage" content="/images/icons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/style.css" type="text/css"/>
-  <script src="/jquery.min.js"></script>
-  <script src="/sienna-boilerplate.js"></script>
-  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/sienna-boilerplate.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>
 
 </head>
 
