--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,8 +35,8 @@
 <div class="container">
   <header>
     <div class="center-text">
-      <img class="logo" src="images/c2m2_logo.png"/></h1>
-      <h1 class="title">Collections of Cinema and Media Music</h1>
+      <a href="/"><img class="logo" src="images/c2m2_logo.png"/></a>
+      <h1 class="title"><a href="/">Collections of Cinema and Media Music</a></h1>
     </div>
     <nav id="main-nav">
       <button class="nav-toggle button-primary" aria-expanded="false" onclick="toggleshow('#nav-menu');">Show/Hide
