--- a/views/suggest.erb
+++ b/views/suggest.erb
@@ -1,19 +1,19 @@
 <h2>Suggest a Resource</h2>
 <form class="resource-suggest" method="post" action="/suggest">
   <label for="rs_name">Your Name *</label>
-  <input type="text" id="rs_name" name="rs_name" value="<%= params[:rs_name] || '' %>" required />
+  <input type="text" id="rs_name" name="rs_name" class="u-full-width" tabindex="1" value="<%= params[:rs_name] || '' %>" required />
   <label for="rs_email">Your Email *</label>
-  <input type="email" id="rs_email" name="rs_email" value="<%= params[:rs_email] || '' %>" required />
+  <input type="email" id="rs_email" name="rs_email" class="u-full-width" tabindex="2" value="<%= params[:rs_email] || '' %>" required />
   <label for="rs_composer">Composer(s) Concerned</label>
-  <input type="text" id="rs_composer" name="rs_composer" value="<%= params[:rs_composer] || '' %>" />
+  <input type="text" id="rs_composer" name="rs_composer" class="u-full-width" tabindex="3" value="<%= params[:rs_composer] || '' %>" />
   <label for="rs_works">Major Work(s) and/or Film(s) Concerned</label>
-  <input type="text" id="rs_works" name="rs_works" value="<%= params[:rs_works] || '' %>" />
+  <input type="text" id="rs_works" name="rs_works" class="u-full-width" tabindex="4" value="<%= params[:rs_works] || '' %>" />
   <label for="rs_link">Link to Resource</label>
-  <input type="url" id="rs_link" name="rs_link" value="<%= params[:rs_link] || '' %>" />
+  <input type="url" id="rs_link" name="rs_link" class="u-full-width" tabindex="5" value="<%= params[:rs_link] || '' %>" />
   <label for="rs_location">Location (name of library, repository, database...)</label>
-  <input type="text" id="rs_location" name="rs_location" value="<%= params[:rs_location] || '' %>" />
+  <input type="text" id="rs_location" name="rs_location" class="u-full-width" tabindex="6" value="<%= params[:rs_location] || '' %>" />
   <label for="rs_comments">Comments</label>
-  <textarea id="rs_comments" name="rs_comments" cols="40" rows="100"><%= params[:rs_comments] || '' %></textarea>
-  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT"></div>
-  <input class="button-primary" type="submit" value="Submit" />
+  <textarea id="rs_comments" name="rs_comments" class="u-full-width" tabindex="7" cols="40" rows="100"><%= params[:rs_comments] || '' %></textarea>
+  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT" class="u-full-width"></div>
+  <input class="button-primary" type="submit" value="Submit" class="u-full-width" tabindex="8" />
 </form>
