update page content

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,6 +6,6 @@
   <input type="email" id="contact_email" name="contact_email" class="u-full-width" tabindex="2" value="<%= params[:contact_email] || '' %>" required />
   <label for="contact_message">Message</label>
   <textarea id="contact_message" name="contact_message" class="u-full-width" tabindex="3" cols="40" rows="100"><%= params[:contact_message] || '' %></textarea>
-  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT" class="u-full-width"></div>
-  <input class="button-primary" type="submit" value="Submit" class="u-full-width" tabindex="4" />
+  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT"></div>
+  <input class="button-primary" type="submit" value="Submit" tabindex="4" />
 </form>
