--- a/views/search.erb
+++ b/views/search.erb
@@ -1,5 +1,5 @@
 <h2>Advanced Search</h2>
-<form class="advanced-search">
+<form class="advanced-search" method="post" action="">
   <label for="keywords">Keywords</label>
   <input type="text" id="keywords" name="keywords" class="u-full-width" tabindex="1" value="<%= params[:keywords] || '' %>" />
   <label for="composer">Composer</label>
