--- a/views/suggest.erb
+++ b/views/suggest.erb
@@ -14,6 +14,6 @@
   <input type="text" id="rs_location" name="rs_location" class="u-full-width" tabindex="6" value="<%= params[:rs_location] || '' %>" />
   <label for="rs_comments">Comments</label>
   <textarea id="rs_comments" name="rs_comments" class="u-full-width" tabindex="7" cols="40" rows="100"><%= params[:rs_comments] || '' %></textarea>
-  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT" class="u-full-width"></div>
-  <input class="button-primary" type="submit" value="Submit" class="u-full-width" tabindex="8" />
+  <div class="g-recaptcha" data-sitekey="6LfFqSAUAAAAAAgzNW9BgPfnmPzwXXJvcKDbqXRT"></div>
+  <input class="button-primary" type="submit" value="Submit" tabindex="8" />
 </form>
