--- a/views/work.erb
+++ b/views/work.erb
@@ -67,6 +67,14 @@
         </td>
       </tr>
       <tr>
+        <th>Repository</th>
+        <td>
+          <a href="/repository/<%= @result[:repository_id] %>">
+            <%= @result[:repository] %>
+          </a>
+        </td>
+      </tr>
+      <tr>
         <th>Material Format</th>
         <td>
           <a href="/material_format/<%= @result[:material_format_id] %>">
